Fix gap between Search and Sort on app store page

--- a/packages/studio/pages/apps/IndexPage/index.module.css
+++ b/packages/studio/pages/apps/IndexPage/index.module.css
@@ -32,3 +32,9 @@
   display: grid;
   margin: 0 auto;
 }
+
+@media (width >= 600px) {
+  .searchSpace {
+    padding-right: 1rem;
+  }
+}
